# routes/game.routes.ts
@@ -1,7 +1,8 @@
 import { Router } from "express";
 import {
   startGame,
-  nextGame
+  nextGame,
+  gameHistory
 } from "../controllers/game.controller.ts";
 import { playerParamsSchema, restartGameParamsSchema } from "../schemas/game.schema.ts";
 import { validate } from "../middleware/validate.middleware.ts";
@@ -11,5 +12,7 @@ const router = Router();
 router.post("/start/:playerName", validate(playerParamsSchema, 'params'), startGame);
 
 router.post("/:playerId/:gameId/next", validate(restartGameParamsSchema, 'params'), nextGame);
+
+router.post("/history/:playerName", validate(playerParamsSchema, 'params'), gameHistory);
 
 export default router;
